# fantastic-barnacle

./: Cargo.toml
src/: main.rs
static/: index.html  newset.html  style.css  teacher.html
