[package]
name = "class_game"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-ws = "0.3.0"
bytestring = "1.4.0"
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.9.0"
reqwest = "0.12.15"
rustrict = "0.7.34"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.1"
